add: navbar criollito

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -17,6 +17,15 @@
   border-radius: 10px;
 }
 
+.navbarContainerCriollito{
+  display: flex;
+  background-color: yellow;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
+    margin: 2rem 0;
+}
+
 .animatedLogoContainerTc{
   width: 250px;
   display: flex;
@@ -31,6 +40,13 @@
 }
 
 
+
+.animatedLogoContainerCriollito{
+  width: 270px;
+  display: flex;
+  align-items: center;
+}
+
 .loadingDevsafio {
   width: 159px;
   height: 53px;
@@ -40,6 +56,21 @@
   background-image: url("./sprites/devsafioIcon.png");
   animation: slideDevsafio 2s steps(16) infinite;
 }
+
+.loadingCriollito {
+  width: 188px;
+  height: 94px;
+  background-size: 188px 6016px; /* 94 * 64 */
+  animation: slideCriollitoSmallDevice 3s steps(63) infinite;
+  /* width: 250px; */
+  /* height: 125px; */
+  background-position: 0 0;
+  /* background-size: 250px 8000px; */
+  background-repeat: no-repeat;
+  background-image: url("./sprites/spriteCriollito.png");
+  /* animation: slideCriollito 4s steps(63) infinite; */
+}
+
 
 .loadingTc {
   width: 125px;                         /* 250 / 2 */
@@ -78,6 +109,22 @@
   }
 }
 
+
+
+@keyframes slideCriollitoSmallDevice {
+  0% {
+    background-position: 0 0;
+  }
+  75% {
+    background-position: 0 -5922px; /* 94 * (64 - 1) */
+    
+  }
+  100% {
+    background-position: 0 -5922px; /* 94 * (64 - 1) */
+    
+  }
+}
+
 .menuContainer{
   padding: 1rem;
 }
@@ -104,4 +151,5 @@ p{
   .linksContainer{
     display: none;
   }
+
 }
