--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,11 +1,10 @@
 .containerHome{
-  width: 100vw;
-  height: 50vh;
-  position: absolute; 
-  top: 50%; 
-  transform: translateY(-50%);
+  width: 50%;
+  height: 50%;
   display: flex;
-  justify-content: space-around;
+  overflow: auto;
+  padding: 2rem 0;
+  background-color: #f5f4f4;
 }
 
 .containerLogos, .containerComponents{
@@ -18,8 +17,7 @@
 
 @media (max-width: 1000px) {
   .containerHome {
-    flex-direction: column;
-    height: 75vh;
+    width: 100%;
   }
   
   .containerLogos, .containerComponents {
